Fix Mobile Overflow Bug

--- a/src/Pages/Compare/CompareView.css
+++ b/src/Pages/Compare/CompareView.css
@@ -92,7 +92,7 @@
 
 @media (max-width: 700px) {
     .compare-page {
-        padding-top: 5em;
+        padding-top: 1em;
         width: 100%;
         height: 100%;
         overflow-y: scroll;
