--- a/src/Pages/Inventory/Components/FiltersBar/FilterBar.Component.Styles.css
+++ b/src/Pages/Inventory/Components/FiltersBar/FilterBar.Component.Styles.css
@@ -94,7 +94,7 @@
     .filter-bar {
         margin-top: 0;
         width: 90%;
-        height: 20%;
+        height: 14%;
         margin-bottom: 2em;
         flex-direction: column;
     }
