--- a/src/Pages/Inventory/Layout/InventoryLayout.css
+++ b/src/Pages/Inventory/Layout/InventoryLayout.css
@@ -27,7 +27,7 @@
 
 @media (max-width: 700px) {
     .inventory-page {
-        padding-top: 5em;
+        padding-top: 1em;
         width: 100%;
         height: 100%;
         flex: none;
