--- a/src/Pages/MyGarage/MyGarageView.css
+++ b/src/Pages/MyGarage/MyGarageView.css
@@ -43,7 +43,7 @@ p {
 
 @media (max-width: 700px) {
     .mygarage-page {
-        padding-top: 6em;
+        padding-top: 1em;
         overflow-y: scroll;
     }
 
