--- a/src/Shared/Navbar/Navbar.Component.Styles.css
+++ b/src/Shared/Navbar/Navbar.Component.Styles.css
@@ -112,7 +112,7 @@
 @media (max-width: 700px) {
 
     .nav-bar {
-        position: fixed;
+        position: sticky;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
